# pc-switcher

./: .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Context.md  High level requirements.md  Plan.md  README.md  btrfs.md  default-config.yaml  draft prompts.txt  install.sh  pyproject.toml  pyrightconfig.json  ruff.toml  test_config.yaml
.claude/: settings.json
.claude/commands/: review-code-structure.md  speckit.consolidate.md  speckit.implement.resolve-feedback.md  speckit.implement.resolve-follow-up.md  speckit.implement.review.md  speckit.plan.resolve-feedback.md  speckit.plan.resolve-follow-up.md  speckit.plan.review-architecture.md  speckit.plan.review-detail.md  speckit.specify.resolve-feedback.md  speckit.specify.review.md  speckit.tasks.resolve-feedback.md
.codex/prompts/: speckit.implement.review.md  speckit.plan.review-architecture.md  speckit.plan.review-detail.md  speckit.specify.review.md
.gemini/commands/: speckit.implement.review.toml  speckit.plan.review-architecture.toml  speckit.plan.review-detail.toml  speckit.plan.review.toml  speckit.specify.review.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/prompts/: speckit.implement.review.prompt.md  speckit.plan.review-architecture.prompt.md  speckit.plan.review-detail.prompt.md  speckit.plan.review.prompt.md  speckit.specify.review.prompt.md
.github/workflows/: ci.yml  integration-tests.yml  pr-requires-issue-closing.yml  release.yml  test-push.yml  test.yml  vm-maintenance.yml  vm-updates.yml
.planning/: HANDOFF.json  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WINDOWS.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: folder-sync-dry-run-7-bytes.md  foldersync-progressbar-hidden.md  pc1-pc2-ssh-permission-denied.md  tui-live-progress-flooding.md  vscode-state-lost-on-sync.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
00/9c96216acc/: metadata.json
01/9bffcaa1bb/: metadata.json
01/d2cd0ada43/: metadata.json
Pre-analysis/: Context.md  Plan.md  README.md
Premature analysis/: README.md  What Must Sync - Review by Deepseek.md  What Must Sync - Review by Gemini.md
config/: default.yaml  minimal.yaml
docs/: Feature breakdown.md  High level requirements.md  Issue triage 2025-12-11.md  Issue triage 2025-12-31.md  README.md  architecture.md  ci-configuration.md  configuration.md  developer-workflow.md  first-release-playbook.md  implementation.md  reading-sync-logs.md  test-audit-report.md  testing-developer-guide.md  testing-framework.md  testing-infrastructure.md  testing-ops-guide.md  testing-playbook.md
examples/: full-featured.yaml
scripts/: install.sh  setup.sh
tests/: __init__.py  conftest.py  local-integration-tests.sh  local-pytest.sh  manual-playbook.md  pyrightconfig.json  run-integration-tests.sh  self-update-test-playbook.md  test_config.py  test_disk.py  test_installation.py  test_installer.py  test_lock.py  test_orchestrator.py  test_session.py  test_signals.py  test_version.py
(+2431 files in other folders)
