[project]
name = "pc-switcher"
dynamic = ["version"]
description = "A synchronization system for seamless switching between Linux desktop machines"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncssh>=2.21.1",
    "jsonschema>=4.25.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
    "packaging>=24.0",
]

[project.scripts]
pc-switcher = "pc_switcher.cli:app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
