[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pcswitcher"
dynamic = ["version"]
description = "Synchronization system for seamless switching between Linux desktop machines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "asyncssh>=2.21.1",
    "jsonschema>=4.25.1",
    "packaging>=25.0",
    "pygithub>=2.5.0",
    "pytimeparse2>=1.7.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "semver>=3.0.4",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
pc-switcher = "pcswitcher.cli:app"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "codespell>=2.4.1",
    "freezegun>=1.5.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-randomly>=4.0.1",
    "ruff>=0.14.7",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "-v",
    "-m", "not integration",
]
markers = [
    "integration: Integration tests (require VM infrastructure)",
    "slow: Tests that take >5 seconds",
    "benchmark: Performance benchmarks (not run by default)",
]
log_cli = true
# Here, set log level to the level we want from logs from our code.
# Inside conftest.py, we filter the root logger to WARNING anyway to reduce noise from third-party libraries.
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
